# work-report

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/scripts/: gen_latest_json.py
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: HelpModal.tsx  ImportModal.tsx  ReportEditor.tsx  Sidebar.tsx  UpdateBanner.tsx  WeeklyRangeModal.tsx
src/types/: index.ts
src/utils/: parser.ts
