[package]
name = "work-reporter"
version = "0.1.0"
description = "Work Reporter"
authors = []
license = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "work_reporter_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-updater = "2"
regex = "1"
